--- a/MyPortfolio/css/styles.css
+++ b/MyPortfolio/css/styles.css
@@ -7,22 +7,17 @@ body{
     margin: 0;
 }
 
-h1, h2, h3, p{
+h1, h2, h3, h4, ul, p{
     margin: 0%;
 }
 
 ul{
     padding: 0;
+    list-style: none;
 }
 
 img{
     width: 100%;
-}
-
-@media screen and (max-width: 767px){
-    img{
-        margin-bottom: 1rem;
-    }
 }
 
 a{
@@ -45,13 +40,6 @@ section{
     margin-bottom: 120px;
 }
 
-@media screen and (max-width: 767px){
-    main{
-        padding: 0 1rem;
-    }
-}
-
-
 /* ヘッダー */
 
 .messageTitle{
@@ -61,6 +49,7 @@ section{
 
 .message__txt{
     text-align: center;
+    margin-bottom: 30px;
 }
 
 /* メニュー */
@@ -78,7 +67,8 @@ section{
 .navMenu{
     background: #1D1D26;
     padding: 1em;
-    margin: 40px 0 120px;
+    margin: 0 0 120px;
+    z-index: 500;
 }
 
 .navMenu__list{
@@ -88,6 +78,14 @@ section{
 
 .navMenu__list a{
     color: #fff ;
+}
+
+/* 固定用スタイル */
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-top: 0;
 }
 
 
@@ -118,31 +116,29 @@ section{
     flex-basis: 45%;
 }
 
-.workSummary__txtBox, .illustSummary__txtBox{
+.workSummary__box{
+  flex-basis: 30%;  
+}
+
+.workSummary__box ul {
+    font-size: 0.85rem;
+}
+
+.illustSummary__txtBox{
     flex-basis: 50%;
 }
 
 .other__appListItem{
     flex-basis: 30%;
+    max-width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+    padding: 1rem 0;
+    margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 767px){
-
-    .workSummary a,
-    .illustSummary a,
-    .workSummary__txtBox,
-    .illustSummary__txtBox,
-    .other__appListItem{
-        flex-basis: 100%;
-    }
-
-    .illustSummary__txtBox{
-        order: 2;
-    }
-    
-}
-
-.conentTitle{
+.contentTitle{
     margin-bottom: 1em;
 }
 
@@ -150,17 +146,15 @@ section{
     margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 767px){
-    .workSummary__txt, .illustSummary__txt, .other__txt{
-        margin-bottom: 2rem;
-    }
-}
-
-.workSummary__txtBox img{
+.workSummary__Box img{
     margin-bottom: 1rem;
 }
 
-.conentTitle{
+.workSummary__box h4 {
+    margin: 1em 0 0.5em;
+}
+
+.contentTitle{
     text-align: center;
 }
 
@@ -174,8 +168,17 @@ section{
     margin: 20px auto 0;
 }
 
+.accessBtn {
+    text-align: right;
+}
 
+.modalBox {
+    margin-bottom: 2rem;
+}
 
+.modalBox > .contentTitle {
+    font-size: 1rem;
+}
 
 /* モーダル */
 
@@ -204,12 +207,6 @@ section{
     z-index: 2;
 }
 
-@media screen and (max-width: 767px){
-    #modal{
-        word-wrap: break-word;
-    }
-}
-
 #modal > p{
     margin: 0 0 20px;
 }
@@ -228,14 +225,6 @@ section{
     margin: 0 auto;
 }
 
-.other__appListItem{
-    max-width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    text-align: center;
-    padding: 1rem 0;
-    margin-bottom: 1rem;
-}
 
 /* フッター */
 
@@ -246,21 +235,6 @@ section{
     padding: 1em 0;
 }
 
-/* レスポンシブだしわけ */
-@media screen and (min-width: 768px){
-    .sp{
-        display: none;
-    }
-}
-
-@media screen and (max-width: 767px){
-    .pc{
-        display: none;
-    }
-}
-
-
-
 /* ハンバーガーメニュー */
 
 .hambMenu {
@@ -270,12 +244,7 @@ section{
   }
 
  @media screen and (max-width: 767px){
-    .hambMenu {
-        margin-left: auto;
-        display: block;
-        text-align: center;
-        color: #fff;
-      }
+
  } 
 
   
@@ -367,4 +336,65 @@ section{
 .scrollIn {
   opacity: 1;
   transform: translate(0, 0);
+}
+
+@media screen and (min-width: 768px){
+    .sp{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .pc{
+        display: none;
+    }
+
+    img{
+        margin-bottom: 1rem;
+    }
+
+    main{
+        padding: 0 1rem;
+    }
+
+    .workSummary a,
+    .illustSummary a,
+    .workSummary__box,
+    .illustSummary__txtBox,
+    .other__appListItem{
+        flex-basis: 100%;
+    }
+
+    .workSummary__box {
+        margin-bottom: 4rem;
+    }
+
+    .illustSummary__txtBox{
+        order: 2;
+    }
+
+    .workSummary__txt, .illustSummary__txt, .other__txt{
+        margin-bottom: 2rem;
+    }
+
+    .other__appListItem{
+        margin: 0 auto 1rem;
+    }
+
+    #modal{
+        word-wrap: break-word;
+    }
+
+    .modalBox .contentTitle {
+        text-align: center;
+    }
+
+    .hambMenu {
+        margin-left: auto;
+        display: block;
+        text-align: center;
+        color: #fff;
+      }
+
+    
 }
